ポートフォリオに必要な情報を追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,53 @@
     <title>satomoekaのポートフォリオ</title>
   </head>
   <body>
-    <h1>satomoeka</h1>
+    <h1>佐藤 萌香</h1>
+
+    <h2>About</h2>
+    <p>
+      プログラミング初心者<br>
+      HTML、CSS、JavaScriptを勉強中
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>もえか</li>
+      <li>千葉県</li>
+      <li>大学3年生</li>
+      <li>2004年9月24日生まれ</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <th>OS</th>
+        <td>Mac</td>
+      </tr>
+        <th>資格・免許</th>
+        <td>ITパスポート</td>
+      </tr>
+    </table>
+
+    <h3>Works</h3>
+    <p>活動内容</p>
+    <ul>
+      <li><a href="https://satomoeka.github.io/">GitHub</a></li>
+    </ul>
+
+    <h3>Contact</h3>
+    <p>SNS</p>
+    <ul>
+      <li><a href="https://www.linkedin.com/">instagram</a></li>
+    </ul>
+
+    <h3>History</h3>
+    <p>学歴、職歴、アルバイト、インターン経験など。</p>
+    <table>
+      <tr>
+        <th>2023年</th>
+        <td>國學院大学 入学</td>
+        <td>ラーメン屋「ダボハウス」 アルバイト勤務開始</td>
+      </tr>
+    </table>
   </body>
 </html>
