--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
     <p>活動内容</p>
     <ul>
       <li><a href="https://satomoeka.github.io/">GitHub</a></li>
+      <li>
+        作った作品
+        <ul>
+          <li><a href="https://satomoeka.github.io/assessment/assessment.html">あなたのいいところ診断</a></li>
+          <li><a href="https://example.com/">作品 2</a></li>
+        </ul>
+      </li>
     </ul>
 
     <h3>Contact</h3>
