--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <li>
         作った作品
         <ul>
-          <li><a href="https://github.com/satomoeka/assessment.git">あなたのいいところ診断</a></li>
+          <li><a href="https://zen-taro.github.io/assessment/%20assessment.html">あなたのいいところ診断</a></li>
           <li><a href="https://example.com/">作品 2</a></li>
         </ul>
       </li>
