--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h3>Works</h3>
     <p>活動内容</p>
     <ul>
-      <li><a href="https://satomoeka.github.io/">GitHub</a></li>
+      <li><a href="https://github.com.satomoeka/">GitHub</a></li>
       <li>
         作った作品
         <ul>
