--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
         <td>ラーメン屋「ダボハウス」 アルバイト勤務開始</td>
       </tr>
     </table>
+
+    <h3>好きな動画</h3>
+    <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/cSjyv-A0rBI?si=hMltpzmNW1mGtP5B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
